--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -1,198 +1,461 @@
 {
-  "extensionName": {
-    "message": "FiltaQuilla",
-    "description": "Name of the extension."
+  "_l10nstatus": {
+    "message": "SPLASH+UI"
   },
-
-  "extensionDescription": {
-    "message": "Genereer snel e-mailfilterregels door e-mails te slepen en neer te zetten en hun attributen te analyseren.",
-    "description": "Description of the extension."
+  "aboutAndSupport": {
+    "message": "Over FiltaQuilla / Help"
   },
-
-  "notificationTitle": {
-    "message": "Click notification",
-    "description": "Title of the click notification."
-  },
-  
-  "window-title": {
-    "message": "Welkom bij $addonName$",
-    "description": "page title. first placeholder will be replaced with Add-on name",
-    "placeholders": {
-      "addonName" : {
-        "content" : "$1", 
-        "example" : "FiltaQuilla"
-      }    
-    }
-  },
-
-  "heading-updated": {
-    "message": "$addonName$ Succesvol bijgewerkt",
-    "description": "page heading. first placeholder will be replaced with Add-on name",
-    "placeholders": {
-      "addonName" : {
-        "content" : "$1", 
-        "example" : "FiltaQuilla"
-      }    
-    }
-  },
-  
-  "heading-installed": {
-    "message": "$addonName$ succesvol geïnstalleerd",
-    "description": "page heading. first placeholder will be replaced with Add-on name",
-    "placeholders": {
-      "addonName" : {
-        "content" : "$1", 
-        "example" : "FiltaQuilla"
-      }    
-    }
-  },
-  
-  
-  "thanks-for-updating-intro": {
-    "message": "Bedankt voor het updaten van $addonName$.",
-    "placeholders": {
-      "addonName" : {
-        "content" : "$1", 
-        "example" : "FiltaQuilla"
-      }    
-    }
-  },
-  
-  "thanks-for-installing-intro": {
-    "message": "Bedankt voor het installeren van  $addonName$.",
-    "placeholders": {
-      "addonName" : {
-        "content" : "$1", 
-        "example" : "FiltaQuilla"
-      }    
-    }
-  },  
-  
- "active-version-info" : {
-    "message": "U voert nu {boldStart} versie $addonVer$ {boldEnd} uit op Thunderbird $appVer$.",
+  "active-version-info": {
     "description": "The boldStart and boldEnd parts will be replaced with html tags",
+    "message": "U voert nu {boldStart} versie $addonVer$ {boldEnd} uit op Thunderbird $appVer$.",
     "placeholders": {
-      "addonVer" : {
-        "content" : "$1", 
-        "example" : "Version 1.1"
+      "addonVer": {
+        "content": "$1",
+        "example": "Version 1.1"
       },
-      "appVer" : {
-        "content" : "$2",
-        "example" : "78.0b4"
+      "appVer": {
+        "content": "$2",
+        "example": "78.0b4"
       }
-      
-    }
-  },  
-  
-  "time-and-effort": { 
-    "message": "Mijn add-ons vereisen fundamentele wijzigingen om compatibel te blijven met het Mozilla-platform. Mijn ontwikkelingsteam bij Github (Realraven2000, opto en paenglab) werkt hard om de volledige functionaliteit voor $addonName$ te herstellen.",
-    "placeholders": {
-      "addonName" : {
-        "content" : "$1", 
-        "example" : "FiltaQuilla"
-      }    
     }
   },
-  
-  "hours-effort" : {
+  "addon-authors-struggle": {
+    "message": "Om nuttig te blijven, moeten wij add-on-ontwikkelaars nu de middelen financieren die nodig zijn om te repareren en te herschrijven, zodat onze gebruikers kunnen blijven profiteren van de functionaliteit die we bieden."
+  },
+  "btn-extend-license": {
+    "message": "Ik wil mijn licentie met een jaar verlengen"
+  },
+  "btn-renew-license": {
+    "message": "Ik wil mijn licentie verlengen"
+  },
+  "btn-want-a-license": {
+    "message": "Ik wil een vergunning kopen"
+  },
+  "btn-want-to-donate": {
+    "message": "Ik wil helpen met een eenmalige donatie."
+  },
+  "checkJavascriptActionBodyEnabled.accesskey": {
+    "message": "Y"
+  },
+  "checkJavascriptActionBodyEnabled.label": {
+    "message": "Javascript-actie met body"
+  },
+  "checkJavascriptEnabled.accesskey": {
+    "message": "J"
+  },
+  "checkJavascriptEnabled.label": {
+    "message": "Javascript"
+  },
+  "cost-of-independence": {
+    "message": "Softwareontwikkeling kost tijd en geld - in tegenstelling tot veel platform-apps worden add-ons niet geschreven door grote bedrijven en worden ze op geen enkele manier gesponsord door Mozilla."
+  },
+  "default": {
+    "message": "Standaard gebruiken"
+  },
+  "donate": {
+    "message": "Help mee met een eenmalige donatie."
+  },
+  "donate-heading": {
+    "message": "Help door te doneren!"
+  },
+  "editJavascript": {
+    "message": "Javascript bewerken"
+  },
+  "enabled": {
+    "message": "Ingeschakeld"
+  },
+  "extend-your-license": {
+    "message": "Overweeg om uw licentie met een jaar te verlengen."
+  },
+  "extensionDescription": {
+    "description": "Description of the extension.",
+    "message": "Genereer snel e-mailfilterregels door e-mails te slepen en neer te zetten en hun attributen te analyseren."
+  },
+  "extensionName": {
+    "description": "Name of the extension.",
+    "message": "FiltaQuilla"
+  },
+  "extensions.filtaquilla.description": {
+    "message": "Aangepaste acties e-mailfilter"
+  },
+  "filtaquilla.applyIncomingFilters": {
+    "message": "Inkomende filters toepassen"
+  },
+  "filtaquilla.applyIncomingFilters.accesskey": {
+    "message": "F"
+  },
+  "filtaquilla.editJavascript": {
+    "message": "Edit JavaScript…"
+  },
+  "filtaquilla.enabled": {
+    "message": "Ingeschakeld"
+  },
+  "filtaquilla.filters": {
+    "message": "Filters"
+  },
+  "filtaquilla.inherit": {
+    "message": "Erven"
+  },
+  "filtaquilla.javascriptAction.name": {
+    "message": "Javascript-actie"
+  },
+  "filtaquilla.javascriptActionBody.name": {
+    "message": "Javascript-actie met hoofdtekst"
+  },
+  "filtaquilla.launcher.launch": {
+    "message": "Launch the File!"
+  },
+  "filtaquilla.launcher.select": {
+    "message": "Select a File…"
+  },
+  "filtaquilla.playSound": {
+    "message": "Geluid afspelen"
+  },
+  "filtaquilla.runProgram.select": {
+    "message": "Select a Program…"
+  },
+  "filtaquilla.runProgram.title": {
+    "message": "Select a Program to run"
+  },
+  "filtaquilla.selectFolder.btn": {
+    "message": "Pick Folder…"
+  },
+  "filtaquilla.selectFolder.title": {
+    "message": "Select a Folder"
+  },
+  "filtaquilla.tone.select": {
+    "message": "Select a Sound File…"
+  },
+  "filterActions": {
+    "message": "Filteracties"
+  },
+  "fq.Bcc": {
+    "message": "Bcc"
+  },
+  "fq.Bcc.access": {
+    "message": "B"
+  },
+  "fq.addSender": {
+    "message": "Afzender aan adressenlijst toevoegen"
+  },
+  "fq.addSender.access": {
+    "message": "L"
+  },
+  "fq.attachmentRegex": {
+    "message": "RegEx-overeenkomst bijlagenaam"
+  },
+  "fq.bodyRegex": {
+    "message": "Body Regexp-wedstrijd"
+  },
+  "fq.copyAsRead": {
+    "message": "Als gelezen kopiëren"
+  },
+  "fq.copyAsRead.access": {
+    "message": "K"
+  },
+  "fq.detachAttachments": {
+    "message": "Bijlagen ontkoppelen naar"
+  },
+  "fq.detachAttachments.access": {
+    "message": "O"
+  },
+  "fq.filtaquilla.mustSelectFolder": {
+    "message": "U dient een doelmap op te geven"
+  },
+  "fq.folderName": {
+    "message": "Mapnaam"
+  },
+  "fq.folderName.access": {
+    "message": "M"
+  },
+  "fq.hdrRegex": {
+    "message": "RegEx-overeenkomst header"
+  },
+  "fq.hdrRegex.access": {
+    "message": "H"
+  },
+  "fq.javascript": {
+    "message": "Javascript"
+  },
+  "fq.javascriptAction": {
+    "message": "Javascript-actie"
+  },
+  "fq.javascriptAction.access": {
+    "message": "V"
+  },
+  "fq.launchFile": {
+    "message": "Bestand uitvoeren"
+  },
+  "fq.launchFile.access": {
+    "message": "U"
+  },
+  "fq.markReplied": {
+    "message": "Als beantwoord markeren"
+  },
+  "fq.markReplied.access": {
+    "message": "E"
+  },
+  "fq.markUnread": {
+    "message": "Als ongelezen markeren"
+  },
+  "fq.markUnread.access": {
+    "message": "M"
+  },
+  "fq.moveLater": {
+    "message": "Later verplaatsen"
+  },
+  "fq.moveLater.access": {
+    "message": "A"
+  },
+  "fq.nobiff": {
+    "message": "Geen notificatie"
+  },
+  "fq.nobiff.access": {
+    "message": "N"
+  },
+  "fq.print": {
+    "message": "Afdrukken"
+  },
+  "fq.print.access": {
+    "message": "D"
+  },
+  "fq.regex.caseInsensitive": {
+    "message": "Regex hoofdletterongevoelige Match"
+  },
+  "fq.removeflagged": {
+    "message": "Ster verwijderen"
+  },
+  "fq.removeflagged.access": {
+    "message": "S"
+  },
+  "fq.removekeyword": {
+    "message": "Label verwijderen"
+  },
+  "fq.removekeyword.access": {
+    "message": "A"
+  },
+  "fq.runFile": {
+    "message": "Programma uitvoeren"
+  },
+  "fq.runFile.access": {
+    "message": "R"
+  },
+  "fq.saveAttachment": {
+    "message": "Bijlagen opslaan in"
+  },
+  "fq.saveAttachment.access": {
+    "message": "J"
+  },
+  "fq.saveMsgAsFile": {
+    "message": "Bericht als bestand opslaan"
+  },
+  "fq.saveMsgAsFile.access": {
+    "message": "I"
+  },
+  "fq.subjectRegex": {
+    "message": "RegEx-overeenkomst onderwerp"
+  },
+  "fq.subjectRegex.access": {
+    "message": "W"
+  },
+  "fq.subjectappend": {
+    "message": "Aan onderwerp toevoegen"
+  },
+  "fq.subjectappend.access": {
+    "message": "G"
+  },
+  "fq.subjectprepend": {
+    "message": "Aan onderwerp vooraf laten gaan"
+  },
+  "fq.subjectprepend.access": {
+    "message": "W"
+  },
+  "fq.threadAnyTag": {
+    "message": "Label van discussieberichten"
+  },
+  "fq.threadAnyTag.access": {
+    "message": "L"
+  },
+  "fq.threadHeadTag": {
+    "message": "Discussieheaderlabel"
+  },
+  "fq.threadHeadTag.access": {
+    "message": "D"
+  },
+  "fq.toneQuilla": {
+    "message": "Geluid afspelen (Tonequilla)"
+  },
+  "fq.trainGood": {
+    "message": "Als Gewenst trainen"
+  },
+  "fq.trainGood.access": {
+    "message": "G"
+  },
+  "fq.trainJunk": {
+    "message": "Als Ongewenst trainen"
+  },
+  "fq.trainJunk.access": {
+    "message": "O"
+  },
+  "heading-installed": {
+    "description": "page heading. first placeholder will be replaced with Add-on name",
+    "message": "$addonName$ succesvol geïnstalleerd",
+    "placeholders": {
+      "addonName": {
+        "content": "$1",
+        "example": "FiltaQuilla"
+      }
+    }
+  },
+  "heading-updated": {
+    "description": "page heading. first placeholder will be replaced with Add-on name",
+    "message": "$addonName$ Succesvol bijgewerkt",
+    "placeholders": {
+      "addonName": {
+        "content": "$1",
+        "example": "FiltaQuilla"
+      }
+    }
+  },
+  "helpFeatureTip": {
+    "message": "Details van deze functie weergeven"
+  },
+  "hours-effort": {
     "message": "We hebben al aanzienlijke middelen (meer dan $hoursSpent$ uur) besteed aan het conversieproject - en er is nog veel meer werk aan het oplossen van regressies en problemen veroorzaakt door veranderingen in Thunderbird.",
     "placeholders": {
-      "hoursSpent" : {
-        "content" : "$1", 
-        "example" : "250"
-      }    
-    }    
-  },
-  
-  "support-suggestion" : {
-    "message": "Zodat $addonName$ functioneel en levend blijft, doe het alsjeblieft een belangrijke gunst:",
-    "placeholders": {
-      "addonName" : {
-        "content" : "$1", 
-        "example" : "FiltaQuilla"
-      }    
+      "hoursSpent": {
+        "content": "$1",
+        "example": "250"
+      }
     }
   },
-  
-  "purchase-a-license" : {
-    "message" : "Koop een licentie."
-  }, 
-      
-  "renew-your-license" : {
-    "message" : "Verleng uw licentie."
-  },  
-  
-  "extend-your-license" : {
-    "message" : "Overweeg om uw licentie met een jaar te verlengen."
-  },  
-      
-  "donate" : {
-    "message" : "Help mee met een eenmalige donatie."
-  },   
-   
-  "purchase-heading" : {
-    "message" : "Een licentie kopen!"
-  }, 
-  
-  "support-preference" : {
-    "message": "Dit is de beste manier om $addonName$ te ondersteunen.",
+  "indexInGlobalDatabase": {
+    "message": "Index in Algemene database"
+  },
+  "inherit": {
+    "message": "Overnemen"
+  },
+  "inheritedProperties": {
+    "message": "Overgenomen eigenschappen"
+  },
+  "label-remind-me": {
+    "message": "Herinner me er over $countDays$ dagen opnieuw aan.",
     "placeholders": {
-      "addonName" : {
-        "content" : "$1", 
-        "example" : "FiltaQuilla"
-      }    
+      "countDays": {
+        "content": "$1",
+        "example": "10"
+      }
     }
-  }, 
-
+  },
+  "mozillas-basic-platform": {
+    "message": "Mozilla biedt alleen een basisplatform om onze software aan u, de eindgebruikers, te leveren. Als we onze gebruikers om betaling of ondersteuning moeten vragen, kunnen we dit niet doen vanaf addons.thunderbird.net - het is geen 'app store' met ingebouwde paywalls of licentiebeheer zoals iTunes of Google Play."
+  },
+  "notificationTitle": {
+    "description": "Title of the click notification.",
+    "message": "Click notification"
+  },
   "ongoing-work": {
     "message": "De noodzakelijke wijzigingen om over te schakelen naar het nieuwe legacy-less model (mail-experiment) hebben al meerdere weken geduurd en zijn nog steeds aan de gang, terwijl sommige functies hierdoor kunnen worden beïnvloed. Met een complexe add-on als deze wordt duur werk onvermijdelijk. Help ons hier alstublieft mee."
   },
-  
-  "btn-want-a-license": {
-    "message" : "Ik wil een vergunning kopen"
-  } ,
-
-  "btn-extend-license": {
-    "message" : "Ik wil mijn licentie met een jaar verlengen"
-  } ,
-
-
-  "btn-renew-license": {
-    "message" : "Ik wil mijn licentie verlengen"
-  } ,
-
-  "donate-heading" : {
-    "message" : "Help door te doneren!"
-  } ,
-
-  "cost-of-independence" : {
-    "message" : "Softwareontwikkeling kost tijd en geld - in tegenstelling tot veel platform-apps worden add-ons niet geschreven door grote bedrijven en worden ze op geen enkele manier gesponsord door Mozilla."
-  } ,
-  
-  "mozillas-basic-platform" : {
-    "message" : "Mozilla biedt alleen een basisplatform om onze software aan u, de eindgebruikers, te leveren. Als we onze gebruikers om betaling of ondersteuning moeten vragen, kunnen we dit niet doen vanaf addons.thunderbird.net - het is geen 'app store' met ingebouwde paywalls of licentiebeheer zoals iTunes of Google Play."
-  } ,
-  
-  "addon-authors-struggle" : {
-    "message" : "Om nuttig te blijven, moeten wij add-on-ontwikkelaars nu de middelen financieren die nodig zijn om te repareren en te herschrijven, zodat onze gebruikers kunnen blijven profiteren van de functionaliteit die we bieden."
-  } ,
-  
-  "btn-want-to-donate" : {
-    "message" : "Ik wil helpen met een eenmalige donatie."
-  } ,
-  
-  "translated-by-google" : {
-    "message": "vertalingen geleverd door Google",
-    "description": "disclaimer."
+  "optionsIntro": {
+    "message": "Schakel alle items in die u beschikbaar wilt hebben in het venster ‘filterregels’. Herstart na de wijzigingen."
   },
-  
-  "label-remind-me" : {
-    "message": "Herinner me er over $countDays$ dagen opnieuw aan.",
+  "pane1.title": {
+    "message": "FiltaQuilla-voorkeuren"
+  },
+  "prefPanel-inheritPane": {
+    "message": "Overgenomen eigenschappen"
+  },
+  "prefwindow.title": {
+    "message": "FiltaQuilla-voorkeuren"
+  },
+  "purchase-a-license": {
+    "message": "Koop een licentie."
+  },
+  "purchase-heading": {
+    "message": "Een licentie kopen!"
+  },
+  "quickFiltersPage": {
+    "message": "quickFilters downloaden!"
+  },
+  "quickFiltersPage_desc": {
+    "message": "Download deze geweldige add-on om uw filteracties een boost te geven. quickFilters maakt definiëren van filters en het beheer ervan een makkie."
+  },
+  "renew-your-license": {
+    "message": "Verleng uw licentie."
+  },
+  "searchTerms": {
+    "message": "Zoekwoorden"
+  },
+  "support-preference": {
+    "message": "Dit is de beste manier om $addonName$ te ondersteunen.",
     "placeholders": {
-      "countDays" : {
-        "content" : "$1", 
-        "example" : "10"
-      }    
-    }    
+      "addonName": {
+        "content": "$1",
+        "example": "FiltaQuilla"
+      }
+    }
+  },
+  "support-suggestion": {
+    "message": "Zodat $addonName$ functioneel en levend blijft, doe het alsjeblieft een belangrijke gunst:",
+    "placeholders": {
+      "addonName": {
+        "content": "$1",
+        "example": "FiltaQuilla"
+      }
+    }
+  },
+  "supportFiltaquilla": {
+    "message": "Support FiltaQuilla"
+  },
+  "supportFiltaquilla_desc": {
+    "message": "FiltaQuilla is free to download and use - the best way to support the development team is by buying a license for quickFilters Pro. It is the most awesome filter extensions for managing and creating filters in a super convenient way."
+  },
+  "supportPage": {
+    "message": "Ondersteuningspagina bezoeken"
+  },
+  "supportPage_desc": {
+    "message": "Deze pagina beschrijft de verschillende acties en voorwaarden die met FiltaQuilla aan e-mailfilters kunt toevoegen."
+  },
+  "thanks-for-installing-intro": {
+    "message": "Bedankt voor het installeren van  $addonName$.",
+    "placeholders": {
+      "addonName": {
+        "content": "$1",
+        "example": "FiltaQuilla"
+      }
+    }
+  },
+  "thanks-for-updating-intro": {
+    "message": "Bedankt voor het updaten van $addonName$.",
+    "placeholders": {
+      "addonName": {
+        "content": "$1",
+        "example": "FiltaQuilla"
+      }
+    }
+  },
+  "time-and-effort": {
+    "message": "Mijn add-ons vereisen fundamentele wijzigingen om compatibel te blijven met het Mozilla-platform. Mijn ontwikkelingsteam bij Github (Realraven2000, opto en paenglab) werkt hard om de volledige functionaliteit voor $addonName$ te herstellen.",
+    "placeholders": {
+      "addonName": {
+        "content": "$1",
+        "example": "FiltaQuilla"
+      }
+    }
+  },
+  "translated-by-google": {
+    "description": "disclaimer.",
+    "message": "vertalingen geleverd door Google"
+  },
+  "window-title": {
+    "description": "page title. first placeholder will be replaced with Add-on name",
+    "message": "Welkom bij $addonName$",
+    "placeholders": {
+      "addonName": {
+        "content": "$1",
+        "example": "FiltaQuilla"
+      }
+    }
   }
 }
