--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -1,200 +1,461 @@
 {
-  "extensionName": {
-    "message": "FiltaQuilla",
-    "description": "Name of the extension."
+  "_l10nstatus": {
+    "message": "SPLASH+UI"
   },
-
-  "extensionDescription": {
-    "message": "Auf die Schnelle neue Filter erzeugen, einfach während man Email in Verzeichnisse einordnet. Filter in weniger als 10 Sekunden erzeugen. Mehrere Filter zusammenführen, und auf andere Konten übertragen.",
-    "description": "Description of the extension."
+  "aboutAndSupport": {
+    "message": "Über FiltaQuilla / Hilfe"
   },
-
-  "notificationTitle": {
-    "message": "Click notification",
-    "description": "Title of the click notification."
-  },
-  
- 
-  "window-title": {
-    "message": "Willkommen bei $addonName$",
-    "description": "Seitentitel. Der erste placeholder wird durch den Add-on Namen ersetzt",
-    "placeholders": {
-      "addonName" : {
-        "content" : "$1", 
-        "example" : "FiltaQuilla"
-      }    
-    }
-  },
-
-  "heading-updated": {
-    "message": "$addonName$ wurde erfolgreich aktualisiert",
-    "description": "Seitenheader. Der erste placeholder wird durch den Add-on Namen ersetzt",
-    "placeholders": {
-      "addonName" : {
-        "content" : "$1", 
-        "example" : "FiltaQuilla"
-      }    
-    }
-  },
-  
-  "heading-installed": {
-    "message": "$addonName$ wurde erfolgreich installiert",
-    "description": "Seitenheader. Der erste placeholder wird durch den Add-on Namen ersetzt",
-    "placeholders": {
-      "addonName" : {
-        "content" : "$1", 
-        "example" : "FiltaQuilla"
-      }    
-    }
-  },
-  
- "thanks-for-updating-intro": {
-    "message": "Danke dass Sie $addonName$ aktualisiert haben.",
-    "placeholders": {
-      "addonName" : {
-        "content" : "$1", 
-        "example" : "FiltaQuilla"
-      }    
-    }
-  },
-  
- "thanks-for-installing-intro": {
-    "message": "Danke dass Sie $addonName$ installiert haben.",
-    "placeholders": {
-      "addonName" : {
-        "content" : "$1", 
-        "example" : "FiltaQuilla"
-      }    
-    }
-  },
-  
-  
- "active-version-info" : {
-    "message":"Es läuft jetzt {boldStart} Version $addonVer$ {boldEnd} auf Thunderbird $appVer$.",
+  "active-version-info": {
     "description": "The boldStart and boldEnd parts will be replaced with html tags",
+    "message": "Es läuft jetzt {boldStart} Version $addonVer$ {boldEnd} auf Thunderbird $appVer$.",
     "placeholders": {
-      "addonVer" : {
-        "content" : "$1", 
-        "example" : "5.0.1"
+      "addonVer": {
+        "content": "$1",
+        "example": "5.0.1"
       },
-      "appVer" : {
-        "content" : "$2",
-        "example" : "78.0b4"
+      "appVer": {
+        "content": "$2",
+        "example": "78.0b4"
       }
-      
-    }
-  },  
-  
-  "time-and-effort": { 
-    "message": "Meine Add-Ons erfordern grundlegende Änderungen, um mit der Mozilla-Plattform kompatibel zu bleiben. Mein Entwicklungsteam auf Github (Realraven2000, opto und paenglab) arbeitet fleißig daran, die volle Funktionalität für $addonName$ wiederherzustellen.",
-    "placeholders": {
-      "addonName" : {
-        "content" : "$1", 
-        "example" : "FiltaQuilla"
-      }    
     }
   },
-  
-  "hours-effort" : {
+  "addon-authors-struggle": {
+    "message": "Um weiterhin nützlich zu sein, müssen Add-On-Entwickler nun vermehrt die für die Reparatur und das Umschreiben erforderlichen Mittel aufbringen, damit unsere Benutzer weiterhin von den Funktionen profitieren können, die wir an den Tisch bringen."
+  },
+  "btn-extend-license": {
+    "message": "Ich möchte meine Lizenz um ein Jahr verlängern"
+  },
+  "btn-renew-license": {
+    "message": "Ich möchte meine Lizenz erneuern"
+  },
+  "btn-want-a-license": {
+    "message": "Ich möchte eine Lizenz kaufen"
+  },
+  "btn-want-to-donate": {
+    "message": "Ich möchte mit einer einmaligen Spende helfen."
+  },
+  "checkJavascriptActionBodyEnabled.accesskey": {
+    "message": "Y"
+  },
+  "checkJavascriptActionBodyEnabled.label": {
+    "message": "Javascript Aktion (mit body)"
+  },
+  "checkJavascriptEnabled.accesskey": {
+    "message": "J"
+  },
+  "checkJavascriptEnabled.label": {
+    "message": "JavaScript"
+  },
+  "cost-of-independence": {
+    "message": "Softwareentwicklung kostet Zeit und Geld - im Gegensatz zu vielen Plattform-Apps werden Add-Ons weder von großen Unternehmen geschrieben noch in irgendeiner Weise von Mozilla gesponsert."
+  },
+  "default": {
+    "message": "Standardeinstellung"
+  },
+  "donate": {
+    "message": "Helfen Sie mit einer einmaligen Spende."
+  },
+  "donate-heading": {
+    "message": "Helfen durch Spenden!"
+  },
+  "editJavascript": {
+    "message": "Javascript editieren"
+  },
+  "enabled": {
+    "message": "Aktiv"
+  },
+  "extend-your-license": {
+    "message": "Verlängern Sie Ihre Lizenz um ein Jahr."
+  },
+  "extensionDescription": {
+    "description": "Description of the extension.",
+    "message": "Auf die Schnelle neue Filter erzeugen, einfach während man Email in Verzeichnisse einordnet. Filter in weniger als 10 Sekunden erzeugen. Mehrere Filter zusammenführen, und auf andere Konten übertragen."
+  },
+  "extensionName": {
+    "description": "Name of the extension.",
+    "message": "FiltaQuilla"
+  },
+  "extensions.filtaquilla.description": {
+    "message": "Benutzerdefinierte Aktionen für Mailfilter"
+  },
+  "filtaquilla.applyIncomingFilters": {
+    "message": "Eingehende Filter ausführen"
+  },
+  "filtaquilla.applyIncomingFilters.accesskey": {
+    "message": "F"
+  },
+  "filtaquilla.editJavascript": {
+    "message": "JavaScript editieren…"
+  },
+  "filtaquilla.enabled": {
+    "message": "Aktiv"
+  },
+  "filtaquilla.filters": {
+    "message": "Filter"
+  },
+  "filtaquilla.inherit": {
+    "message": "Übernehmen"
+  },
+  "filtaquilla.javascriptAction.name": {
+    "message": "JavaScript Aktion"
+  },
+  "filtaquilla.javascriptActionBody.name": {
+    "message": "JavaScript Aktion (mit body)"
+  },
+  "filtaquilla.launcher.launch": {
+    "message": "Datei ausführen!"
+  },
+  "filtaquilla.launcher.select": {
+    "message": "Datei auswählen…"
+  },
+  "filtaquilla.playSound": {
+    "message": "Klang abspielen"
+  },
+  "filtaquilla.runProgram.select": {
+    "message": "Programm auswählen…"
+  },
+  "filtaquilla.runProgram.title": {
+    "message": "Wählen Sie ein Programm das ausgeführt werden soll"
+  },
+  "filtaquilla.selectFolder.btn": {
+    "message": "Verzeichnis wählen…"
+  },
+  "filtaquilla.selectFolder.title": {
+    "message": "Verzeichnis auswählen"
+  },
+  "filtaquilla.tone.select": {
+    "message": "Klangdatei auswählen…"
+  },
+  "filterActions": {
+    "message": "Filter Aktionen"
+  },
+  "fq.Bcc": {
+    "message": "Blindkopie (Bcc)"
+  },
+  "fq.Bcc.access": {
+    "message": "B"
+  },
+  "fq.addSender": {
+    "message": "Absender zu Liste hinzufügen"
+  },
+  "fq.addSender.access": {
+    "message": "L"
+  },
+  "fq.attachmentRegex": {
+    "message": "Anhangs-Namen vergleichen (Regulärer Ausdruck)"
+  },
+  "fq.bodyRegex": {
+    "message": "Body Regulärer Ausdruck"
+  },
+  "fq.copyAsRead": {
+    "message": "Gelesene Kopie erstellen"
+  },
+  "fq.copyAsRead.access": {
+    "message": "K"
+  },
+  "fq.detachAttachments": {
+    "message": "Anhänge abtrennen nach"
+  },
+  "fq.detachAttachments.access": {
+    "message": "B"
+  },
+  "fq.filtaquilla.mustSelectFolder": {
+    "message": "Bitte ein Verzeichnis auswählen"
+  },
+  "fq.folderName": {
+    "message": "Verzeichnisname"
+  },
+  "fq.folderName.access": {
+    "message": "V"
+  },
+  "fq.hdrRegex": {
+    "message": "Header vergleichen (Regulärer Ausdruck)"
+  },
+  "fq.hdrRegex.access": {
+    "message": "R"
+  },
+  "fq.javascript": {
+    "message": "JavaScript"
+  },
+  "fq.javascriptAction": {
+    "message": "Javascript Aktion"
+  },
+  "fq.javascriptAction.access": {
+    "message": "J"
+  },
+  "fq.launchFile": {
+    "message": "Datei ausführen"
+  },
+  "fq.launchFile.access": {
+    "message": "F"
+  },
+  "fq.markReplied": {
+    "message": "Als gelesen markieren"
+  },
+  "fq.markReplied.access": {
+    "message": "M"
+  },
+  "fq.markUnread": {
+    "message": "Als ungelesen markieren"
+  },
+  "fq.markUnread.access": {
+    "message": "U"
+  },
+  "fq.moveLater": {
+    "message": "Später verschieben"
+  },
+  "fq.moveLater.access": {
+    "message": "S"
+  },
+  "fq.nobiff": {
+    "message": "Nicht benachrichtigen"
+  },
+  "fq.nobiff.access": {
+    "message": "N"
+  },
+  "fq.print": {
+    "message": "Ausdrucken"
+  },
+  "fq.print.access": {
+    "message": "K"
+  },
+  "fq.regex.caseInsensitive": {
+    "message": "Regulärer Ausdruck ohne Beachtung der Groß-/Kleinschreibung"
+  },
+  "fq.removeflagged": {
+    "message": "Stern entfernen"
+  },
+  "fq.removeflagged.access": {
+    "message": "S"
+  },
+  "fq.removekeyword": {
+    "message": "Schlagwort entfernen"
+  },
+  "fq.removekeyword.access": {
+    "message": "w"
+  },
+  "fq.runFile": {
+    "message": "Programm ausführen"
+  },
+  "fq.runFile.access": {
+    "message": "R"
+  },
+  "fq.saveAttachment": {
+    "message": "Anhänge abspeichern in"
+  },
+  "fq.saveAttachment.access": {
+    "message": "A"
+  },
+  "fq.saveMsgAsFile": {
+    "message": "Mail als Datei abspeichern"
+  },
+  "fq.saveMsgAsFile.access": {
+    "message": "D"
+  },
+  "fq.subjectRegex": {
+    "message": "Betreff vergleichen (Regulärer Ausdruck)"
+  },
+  "fq.subjectRegex.access": {
+    "message": "V"
+  },
+  "fq.subjectappend": {
+    "message": "Betreff Postfix"
+  },
+  "fq.subjectappend.access": {
+    "message": "O"
+  },
+  "fq.subjectprepend": {
+    "message": "Betreff Präfix"
+  },
+  "fq.subjectprepend.access": {
+    "message": "X"
+  },
+  "fq.threadAnyTag": {
+    "message": "Schlagwort aller Mails der Unterhaltung"
+  },
+  "fq.threadAnyTag.access": {
+    "message": "T"
+  },
+  "fq.threadHeadTag": {
+    "message": "Schlagwort der Ersten Mail der Unterhaltung"
+  },
+  "fq.threadHeadTag.access": {
+    "message": "U"
+  },
+  "fq.toneQuilla": {
+    "message": "Klang abspielen (Tonequilla)"
+  },
+  "fq.trainGood": {
+    "message": "Als kein Junk kategorisieren"
+  },
+  "fq.trainGood.access": {
+    "message": "N"
+  },
+  "fq.trainJunk": {
+    "message": "Als Junk markieren"
+  },
+  "fq.trainJunk.access": {
+    "message": "J"
+  },
+  "heading-installed": {
+    "description": "Seitenheader. Der erste placeholder wird durch den Add-on Namen ersetzt",
+    "message": "$addonName$ wurde erfolgreich installiert",
+    "placeholders": {
+      "addonName": {
+        "content": "$1",
+        "example": "FiltaQuilla"
+      }
+    }
+  },
+  "heading-updated": {
+    "description": "Seitenheader. Der erste placeholder wird durch den Add-on Namen ersetzt",
+    "message": "$addonName$ wurde erfolgreich aktualisiert",
+    "placeholders": {
+      "addonName": {
+        "content": "$1",
+        "example": "FiltaQuilla"
+      }
+    }
+  },
+  "helpFeatureTip": {
+    "message": "Mehr Informationen über diese Funktion"
+  },
+  "hours-effort": {
     "message": "Wir haben bereits erhebliche Ressourcen (über $hoursSpent$ Stunden) für das Konvertierungsprojekt aufgewendet - und es gibt mehr Arbeit bei der Behebung von Regressionen und Problemen, die durch Änderungen in Thunderbird verursacht werden.",
     "placeholders": {
-      "hoursSpent" : {
-        "content" : "$1", 
-        "example" : "250"
-      }    
+      "hoursSpent": {
+        "content": "$1",
+        "example": "250"
+      }
     }
   },
-  
-  "support-suggestion" : {
-    "message": "Damit $addonName$ weiterhin funktionsfähig und lebendig bleiben kann, tun Sie ihm bitte einen entscheidenden Gefallen:",
+  "indexInGlobalDatabase": {
+    "message": "In Globaler Datenbank indizieren (GLODA)"
+  },
+  "inherit": {
+    "message": "Übernehmen"
+  },
+  "inheritedProperties": {
+    "message": "Übernommene Eigenschaften"
+  },
+  "label-remind-me": {
+    "message": "Erinnern Sie mich noch einmal in $ countDays $ Tagen.",
     "placeholders": {
-      "addonName" : {
-        "content" : "$1", 
-        "example" : "FiltaQuilla"
-      }    
+      "countDays": {
+        "content": "$1",
+        "example": "10"
+      }
     }
-  } , 
-  
-  "purchase-a-license" : {
-    "message" : "Kaufen Sie eine Lizenz."
-  }, 
-  
-  "renew-your-license" : {
-    "message" : "Erneuern Sie Ihre Lizenz."
-  },  
-  
-  "extend-your-license" : {
-    "message" : "Verlängern Sie Ihre Lizenz um ein Jahr."
-  },    
-      
-  "donate" : {
-    "message" : "Helfen Sie mit einer einmaligen Spende."
-  },   
-
-  "purchase-heading" : {
-    "message" : "Lizenz erwerben!"
-  }, 
-  
-  "support-preference" : {
-    "message": "Dies ist die bevorzugte Methode zur Unterstützung von $addonName$.",
-    "placeholders": {
-      "addonName" : {
-        "content" : "$1", 
-        "example" : "FiltaQuilla"
-      }    
-    }
-  }, 
-  
+  },
+  "mozillas-basic-platform": {
+    "message": "Mozilla bietet nur eine Basis-Plattform, um unsere Software für Sie als Endbenutzer weiterzuleiten. Wenn wir unsere Benutzer um Zahlung oder Support bitten müssen, können wir dies nicht über addons.thunderbird.net tun - es handelt sich nicht um einen App Store mit integrierten Paywalls oder Lizenzverwaltung wie iTunes oder Google Play."
+  },
+  "notificationTitle": {
+    "description": "Title of the click notification.",
+    "message": "Click notification"
+  },
   "ongoing-work": {
     "message": "Die notwendigen Änderungen, um auf das neue Modell ohne Legacy (Mail-Experiment) umzusteigen, dauerten bereits mehrere Wochen und dauern noch an, während einige Funktionen beeinträchtigt werden könnten. Mit einem komplexen Add-On wie diesem wird teure Arbeit unvermeidlich. Bitte helfen Sie uns dabei."
   },
-
-  
-  "btn-want-a-license": {
-    "message" : "Ich möchte eine Lizenz kaufen"
-  } ,
-  
-  "btn-extend-license": {
-    "message" : "Ich möchte meine Lizenz um ein Jahr verlängern"
-  } ,
-  
-  "btn-renew-license": {
-    "message" : "Ich möchte meine Lizenz erneuern"
-  } ,
-  
-  
-  "donate-heading" : {
-    "message" : "Helfen durch Spenden!"
-  } ,
-  
-  "cost-of-independence" : {
-    "message" : "Softwareentwicklung kostet Zeit und Geld - im Gegensatz zu vielen Plattform-Apps werden Add-Ons weder von großen Unternehmen geschrieben noch in irgendeiner Weise von Mozilla gesponsert."
-  } ,
-  
-  "mozillas-basic-platform" : {
-    "message" : "Mozilla bietet nur eine Basis-Plattform, um unsere Software für Sie als Endbenutzer weiterzuleiten. Wenn wir unsere Benutzer um Zahlung oder Support bitten müssen, können wir dies nicht über addons.thunderbird.net tun - es handelt sich nicht um einen App Store mit integrierten Paywalls oder Lizenzverwaltung wie iTunes oder Google Play."
-  } ,
-    
-  "addon-authors-struggle" : {
-    "message" : "Um weiterhin nützlich zu sein, müssen Add-On-Entwickler nun vermehrt die für die Reparatur und das Umschreiben erforderlichen Mittel aufbringen, damit unsere Benutzer weiterhin von den Funktionen profitieren können, die wir an den Tisch bringen."
-  } ,  
-      
-  "btn-want-to-donate" : {
-    "message" : "Ich möchte mit einer einmaligen Spende helfen."
-  } ,
-  
-  "translated-by-google" : {
-    "message": "translations provided by google",
-    "description": "disclaimer."
+  "optionsIntro": {
+    "message": "Aktivieren Sie alle Einträge die im 'Filter bearbeiten' Dialog angeboten werden sollen. Neustart erforderlich."
   },
-  
-  "label-remind-me" : {
-    "message": "Erinnern Sie mich noch einmal in $ countDays $ Tagen.",
+  "pane1.title": {
+    "message": "Einstellungen für FiltaQuilla"
+  },
+  "prefPanel-inheritPane": {
+    "message": "Übernommene Eigenschaften"
+  },
+  "prefwindow.title": {
+    "message": "Einstellungen für FiltaQuilla"
+  },
+  "purchase-a-license": {
+    "message": "Kaufen Sie eine Lizenz."
+  },
+  "purchase-heading": {
+    "message": "Lizenz erwerben!"
+  },
+  "quickFiltersPage": {
+    "message": "Holen Sie sich quickFilters!"
+  },
+  "quickFiltersPage_desc": {
+    "message": "Laden Sie dieses fantastische Add-on um Ihre Filterregeln aufzufrisieren. quickFilters macht Filter Definition und Management zum Kinderspiel."
+  },
+  "renew-your-license": {
+    "message": "Erneuern Sie Ihre Lizenz."
+  },
+  "searchTerms": {
+    "message": "Suchbegriffe"
+  },
+  "support-preference": {
+    "message": "Dies ist die bevorzugte Methode zur Unterstützung von $addonName$.",
     "placeholders": {
-      "countDays" : {
-        "content" : "$1", 
-        "example" : "10"
-      }    
-    }    
+      "addonName": {
+        "content": "$1",
+        "example": "FiltaQuilla"
+      }
+    }
+  },
+  "support-suggestion": {
+    "message": "Damit $addonName$ weiterhin funktionsfähig und lebendig bleiben kann, tun Sie ihm bitte einen entscheidenden Gefallen:",
+    "placeholders": {
+      "addonName": {
+        "content": "$1",
+        "example": "FiltaQuilla"
+      }
+    }
+  },
+  "supportFiltaquilla": {
+    "message": "FiltaQuilla Unterstützen"
+  },
+  "supportFiltaquilla_desc": {
+    "message": "FiltaQuilla kann kostenlos heruntergeladen und verwendet werden. Der beste Weg, das Entwicklungsteam zu unterstützen, ist der Kauf einer Lizenz für quickFilters Pro. Es ist die beeindruckendste Filtererweiterung für die Verwaltung und Erstellung von Filtern auf äußerst praktische Weise."
+  },
+  "supportPage": {
+    "message": "Support Seite besuchen"
+  },
+  "supportPage_desc": {
+    "message": "Diese Seite beschreibt die verschiedenen Aktionen und Bedingungen die man mit FiltaQuilla zu den Filterregeln hinzufügen kann."
+  },
+  "thanks-for-installing-intro": {
+    "message": "Danke dass Sie $addonName$ installiert haben.",
+    "placeholders": {
+      "addonName": {
+        "content": "$1",
+        "example": "FiltaQuilla"
+      }
+    }
+  },
+  "thanks-for-updating-intro": {
+    "message": "Danke dass Sie $addonName$ aktualisiert haben.",
+    "placeholders": {
+      "addonName": {
+        "content": "$1",
+        "example": "FiltaQuilla"
+      }
+    }
+  },
+  "time-and-effort": {
+    "message": "Meine Add-Ons erfordern grundlegende Änderungen, um mit der Mozilla-Plattform kompatibel zu bleiben. Mein Entwicklungsteam auf Github (Realraven2000, opto und paenglab) arbeitet fleißig daran, die volle Funktionalität für $addonName$ wiederherzustellen.",
+    "placeholders": {
+      "addonName": {
+        "content": "$1",
+        "example": "FiltaQuilla"
+      }
+    }
+  },
+  "translated-by-google": {
+    "description": "disclaimer.",
+    "message": "translations provided by google"
+  },
+  "window-title": {
+    "description": "Seitentitel. Der erste placeholder wird durch den Add-on Namen ersetzt",
+    "message": "Willkommen bei $addonName$",
+    "placeholders": {
+      "addonName": {
+        "content": "$1",
+        "example": "FiltaQuilla"
+      }
+    }
   }
 }
