--- a/_locales/sv/messages.json
+++ b/_locales/sv/messages.json
@@ -1,198 +1,461 @@
 {
-  "extensionName": {
-    "message": "FiltaQuilla",
-    "description": "Name of the extension."
+  "_l10nstatus": {
+    "message": "SPLASH+UI"
   },
-
-  "extensionDescription": {
-    "message": "Generera snabbt e-postfilterregler direkt, genom att dra och släppa mejl och analysera deras attribut.",
-    "description": "Description of the extension."
+  "aboutAndSupport": {
+    "message": "Om FiltaQuilla / Hjälp"
   },
-
-  "notificationTitle": {
-    "message": "Click notification",
-    "description": "Title of the click notification."
-  },
-  
-  "window-title": {
-    "message": "Välkommen till $addonName$",
-    "description": "page title. first placeholder will be replaced with Add-on name",
-    "placeholders": {
-      "addonName" : {
-        "content" : "$1", 
-        "example" : "FiltaQuilla"
-      }    
-    }
-  },
-
-  "heading-updated": {
-    "message": "$addonName$ uppdaterades med framgång",
-    "description": "page heading. first placeholder will be replaced with Add-on name",
-    "placeholders": {
-      "addonName" : {
-        "content" : "$1", 
-        "example" : "FiltaQuilla"
-      }    
-    }
-  },
-  
-  "heading-installed": {
-    "message": "$addonName$ installerades med framgång",
-    "description": "page heading. first placeholder will be replaced with Add-on name",
-    "placeholders": {
-      "addonName" : {
-        "content" : "$1", 
-        "example" : "FiltaQuilla"
-      }    
-    }
-  },
-  
-  
-  "thanks-for-updating-intro": {
-    "message": "Tack för att du uppdaterade $addonName$.",
-    "placeholders": {
-      "addonName" : {
-        "content" : "$1", 
-        "example" : "FiltaQuilla"
-      }    
-    }
-  },
-  
-  "thanks-for-installing-intro": {
-    "message": "Tack för att du installerade $addonName$.",
-    "placeholders": {
-      "addonName" : {
-        "content" : "$1", 
-        "example" : "FiltaQuilla"
-      }    
-    }
-  },  
-  
- "active-version-info" : {
-    "message": "Du kör nu {boldStart} version $addonVer$ {boldEnd} på Thunderbird $appVer$.",
+  "active-version-info": {
     "description": "The boldStart and boldEnd parts will be replaced with html tags",
+    "message": "Du kör nu {boldStart} version $addonVer$ {boldEnd} på Thunderbird $appVer$.",
     "placeholders": {
-      "addonVer" : {
-        "content" : "$1", 
-        "example" : "Version 1.1"
+      "addonVer": {
+        "content": "$1",
+        "example": "Version 1.1"
       },
-      "appVer" : {
-        "content" : "$2",
-        "example" : "78.0b4"
+      "appVer": {
+        "content": "$2",
+        "example": "78.0b4"
       }
-      
-    }
-  },  
-  
-  "time-and-effort": { 
-    "message": "Mina tillägg kräver grundläggande ändringar för att förbli kompatibla med Mozilla-plattformen. Mitt utvecklingsteam på Github (Realraven2000, opto och paenglab) arbetar flitigt med att återställa full funktionalitet för  $addonName$.",
-    "placeholders": {
-      "addonName" : {
-        "content" : "$1", 
-        "example" : "FiltaQuilla"
-      }    
     }
   },
-  
-  "hours-effort" : {
+  "addon-authors-struggle": {
+    "message": "För att fortsätta vara användbar måste vi tilläggsutvecklare nu finansiera de resurser som behövs för att fixa och skriva om så att våra användare kan dra nytta av den funktionalitet vi tillhandahåller."
+  },
+  "btn-extend-license": {
+    "message": "Jag vill förlänga min licens med ett år"
+  },
+  "btn-renew-license": {
+    "message": "Jag vill förnya min licens"
+  },
+  "btn-want-a-license": {
+    "message": "Jag vill köpa en licens"
+  },
+  "btn-want-to-donate": {
+    "message": "Jag vill hjälpa till med en engångs donation."
+  },
+  "checkJavascriptActionBodyEnabled.accesskey": {
+    "message": "c"
+  },
+  "checkJavascriptActionBodyEnabled.label": {
+    "message": "JavaScript-åtgärd med innehållstext"
+  },
+  "checkJavascriptEnabled.accesskey": {
+    "message": "J"
+  },
+  "checkJavascriptEnabled.label": {
+    "message": "JavaScript"
+  },
+  "cost-of-independence": {
+    "message": "Mjukvaruutveckling kostar tid och pengar - till skillnad från många plattformsappar är tillägg inte skrivna av stora företag och de sponsras inte heller på något sätt av Mozilla."
+  },
+  "default": {
+    "message": "Använd standardvärden"
+  },
+  "donate": {
+    "message": "Hjälp med en engångs donation."
+  },
+  "donate-heading": {
+    "message": "Hjälp genom att donera!"
+  },
+  "editJavascript": {
+    "message": "Redigera JavaScript"
+  },
+  "enabled": {
+    "message": "Aktiverad"
+  },
+  "extend-your-license": {
+    "message": "Överväg att förlänga din licens med ett år."
+  },
+  "extensionDescription": {
+    "description": "Description of the extension.",
+    "message": "Generera snabbt e-postfilterregler direkt, genom att dra och släppa mejl och analysera deras attribut."
+  },
+  "extensionName": {
+    "description": "Name of the extension.",
+    "message": "FiltaQuilla"
+  },
+  "extensions.filtaquilla.description": {
+    "message": "E-postfiltrerande anpassade åtgärder"
+  },
+  "filtaquilla.applyIncomingFilters": {
+    "message": "Tillämpa filter för inkommande"
+  },
+  "filtaquilla.applyIncomingFilters.accesskey": {
+    "message": "f"
+  },
+  "filtaquilla.editJavascript": {
+    "message": "Redigera JavaScript…"
+  },
+  "filtaquilla.enabled": {
+    "message": "Aktiverad"
+  },
+  "filtaquilla.filters": {
+    "message": "Filter"
+  },
+  "filtaquilla.inherit": {
+    "message": "Ärv"
+  },
+  "filtaquilla.javascriptAction.name": {
+    "message": "JavaScript-åtgärd"
+  },
+  "filtaquilla.javascriptActionBody.name": {
+    "message": "JavaScript-åtgärd med innehållstext"
+  },
+  "filtaquilla.launcher.launch": {
+    "message": "Starta filen!"
+  },
+  "filtaquilla.launcher.select": {
+    "message": "Välj en fil…"
+  },
+  "filtaquilla.playSound": {
+    "message": "Spela ljud"
+  },
+  "filtaquilla.runProgram.select": {
+    "message": "Välj ett program…"
+  },
+  "filtaquilla.runProgram.title": {
+    "message": "Välj ett program att utföra"
+  },
+  "filtaquilla.selectFolder.btn": {
+    "message": "Välj mapp…"
+  },
+  "filtaquilla.selectFolder.title": {
+    "message": "Välj en mapp"
+  },
+  "filtaquilla.tone.select": {
+    "message": "Välj en ljudfil…"
+  },
+  "filterActions": {
+    "message": "Filtreringsåtgärder"
+  },
+  "fq.Bcc": {
+    "message": "Hemlig kopia"
+  },
+  "fq.Bcc.access": {
+    "message": "H"
+  },
+  "fq.addSender": {
+    "message": "Lägg till avsändare i adresslistan"
+  },
+  "fq.addSender.access": {
+    "message": "v"
+  },
+  "fq.attachmentRegex": {
+    "message": "Regexmatchning i bilagans namn"
+  },
+  "fq.bodyRegex": {
+    "message": "Body Regexp-matchning"
+  },
+  "fq.copyAsRead": {
+    "message": "Kopiera som läst"
+  },
+  "fq.copyAsRead.access": {
+    "message": "K"
+  },
+  "fq.detachAttachments": {
+    "message": "Flytta bifogade filer till"
+  },
+  "fq.detachAttachments.access": {
+    "message": "F"
+  },
+  "fq.filtaquilla.mustSelectFolder": {
+    "message": "Du måste markera en målmapp"
+  },
+  "fq.folderName": {
+    "message": "Mappnamn"
+  },
+  "fq.folderName.access": {
+    "message": "M"
+  },
+  "fq.hdrRegex": {
+    "message": "Regex-matchning i sidhuvudet"
+  },
+  "fq.hdrRegex.access": {
+    "message": "m"
+  },
+  "fq.javascript": {
+    "message": "JavaScript"
+  },
+  "fq.javascriptAction": {
+    "message": "JavaScript-åtgärd"
+  },
+  "fq.javascriptAction.access": {
+    "message": "v"
+  },
+  "fq.launchFile": {
+    "message": "Kör fil"
+  },
+  "fq.launchFile.access": {
+    "message": "f"
+  },
+  "fq.markReplied": {
+    "message": "Markera som besvarad"
+  },
+  "fq.markReplied.access": {
+    "message": "b"
+  },
+  "fq.markUnread": {
+    "message": "Markera som oläst"
+  },
+  "fq.markUnread.access": {
+    "message": "k"
+  },
+  "fq.moveLater": {
+    "message": "Flytta senare"
+  },
+  "fq.moveLater.access": {
+    "message": "a"
+  },
+  "fq.nobiff": {
+    "message": "Avisera inte"
+  },
+  "fq.nobiff.access": {
+    "message": "n"
+  },
+  "fq.print": {
+    "message": "Skriv ut"
+  },
+  "fq.print.access": {
+    "message": "u"
+  },
+  "fq.regex.caseInsensitive": {
+    "message": "Regex skiftlägeskänslig Match"
+  },
+  "fq.removeflagged": {
+    "message": "Ta bort stjärna"
+  },
+  "fq.removeflagged.access": {
+    "message": "j"
+  },
+  "fq.removekeyword": {
+    "message": "Ta bort tag"
+  },
+  "fq.removekeyword.access": {
+    "message": "b"
+  },
+  "fq.runFile": {
+    "message": "Kör program"
+  },
+  "fq.runFile.access": {
+    "message": "k"
+  },
+  "fq.saveAttachment": {
+    "message": "Spara bifogade filer till"
+  },
+  "fq.saveAttachment.access": {
+    "message": "p"
+  },
+  "fq.saveMsgAsFile": {
+    "message": "Spara meddelande som fil"
+  },
+  "fq.saveMsgAsFile.access": {
+    "message": "m"
+  },
+  "fq.subjectRegex": {
+    "message": "Regex-matchning i ämnet"
+  },
+  "fq.subjectRegex.access": {
+    "message": "ä"
+  },
+  "fq.subjectappend": {
+    "message": "Lägg till i ämnets slut"
+  },
+  "fq.subjectappend.access": {
+    "message": "s"
+  },
+  "fq.subjectprepend": {
+    "message": "Lägg till i ämnets början"
+  },
+  "fq.subjectprepend.access": {
+    "message": "l"
+  },
+  "fq.threadAnyTag": {
+    "message": "Tagg för trådmeddelanden"
+  },
+  "fq.threadAnyTag.access": {
+    "message": "m"
+  },
+  "fq.threadHeadTag": {
+    "message": "Tagg för trådsidhuvudet"
+  },
+  "fq.threadHeadTag.access": {
+    "message": "s"
+  },
+  "fq.toneQuilla": {
+    "message": "Spela ljud (Tonequilla)"
+  },
+  "fq.trainGood": {
+    "message": "Träna som bra"
+  },
+  "fq.trainGood.access": {
+    "message": "b"
+  },
+  "fq.trainJunk": {
+    "message": "Träna som skräp"
+  },
+  "fq.trainJunk.access": {
+    "message": "ä"
+  },
+  "heading-installed": {
+    "description": "page heading. first placeholder will be replaced with Add-on name",
+    "message": "$addonName$ installerades med framgång",
+    "placeholders": {
+      "addonName": {
+        "content": "$1",
+        "example": "FiltaQuilla"
+      }
+    }
+  },
+  "heading-updated": {
+    "description": "page heading. first placeholder will be replaced with Add-on name",
+    "message": "$addonName$ uppdaterades med framgång",
+    "placeholders": {
+      "addonName": {
+        "content": "$1",
+        "example": "FiltaQuilla"
+      }
+    }
+  },
+  "helpFeatureTip": {
+    "message": "Visa detaljer om denna funktion"
+  },
+  "hours-effort": {
     "message": "Vi har redan spenderat betydande resurser (över $hoursSpent$ timmar) på konverteringsprojektet - och det finns mycket mer arbete med att fixa regressioner och problem som orsakas av förändringar i Thunderbird.",
     "placeholders": {
-      "hoursSpent" : {
-        "content" : "$1", 
-        "example" : "250"
-      }    
-    }    
-  },
-  
-  "support-suggestion" : {
-    "message": "Så att $addonName$ förblir funktionellt och vid liv, gör det en viktig tjänst:",
-    "placeholders": {
-      "addonName" : {
-        "content" : "$1", 
-        "example" : "FiltaQuilla"
-      }    
+      "hoursSpent": {
+        "content": "$1",
+        "example": "250"
+      }
     }
   },
-  
-  "purchase-a-license" : {
-    "message" : "Köp en licens."
-  }, 
-      
-  "renew-your-license" : {
-    "message" : "Förnya din licens."
-  },  
-  
-  "extend-your-license" : {
-    "message" : "Överväg att förlänga din licens med ett år."
-  },  
-      
-  "donate" : {
-    "message" : "Hjälp med en engångs donation."
-  },   
-   
-  "purchase-heading" : {
-    "message" : "Att köpa en licens!"
-  }, 
-  
-  "support-preference" : {
-    "message": "Detta är det föredragna sättet att stödja $addonName$.",
+  "indexInGlobalDatabase": {
+    "message": "Index i global databas"
+  },
+  "inherit": {
+    "message": "Ärv"
+  },
+  "inheritedProperties": {
+    "message": "Ärvda egenskaper"
+  },
+  "label-remind-me": {
+    "message": "Påminn mig igen om $countDays$ dagar.",
     "placeholders": {
-      "addonName" : {
-        "content" : "$1", 
-        "example" : "FiltaQuilla"
-      }    
+      "countDays": {
+        "content": "$1",
+        "example": "10"
+      }
     }
-  }, 
-
+  },
+  "mozillas-basic-platform": {
+    "message": "Mozilla tillhandahåller bara en grundläggande plattform för att leverera vår programvara till dig, slutanvändarna. Om vi behöver be våra användare om betalning eller support kan vi inte göra detta från addons.thunderbird.net - det är inte en 'app store' med inbyggda betalväggar eller licenshantering som iTunes eller google play."
+  },
+  "notificationTitle": {
+    "description": "Title of the click notification.",
+    "message": "Click notification"
+  },
   "ongoing-work": {
     "message": "De nödvändiga ändringarna för att byta till den nya arvslösa modellen (mailexperiment) tog redan flera veckor och pågår fortfarande, medan vissa funktioner kan påverkas. Med ett komplext tillägg som detta blir dyrt arbete oundvikligt. Snälla hjälp oss med detta."
   },
-  
-  "btn-want-a-license": {
-    "message" : "Jag vill köpa en licens"
-  } ,
-
-  "btn-extend-license": {
-    "message" : "Jag vill förlänga min licens med ett år"
-  } ,
-
-
-  "btn-renew-license": {
-    "message" : "Jag vill förnya min licens"
-  } ,
-
-  "donate-heading" : {
-    "message" : "Hjälp genom att donera!"
-  } ,
-
-  "cost-of-independence" : {
-    "message" : "Mjukvaruutveckling kostar tid och pengar - till skillnad från många plattformsappar är tillägg inte skrivna av stora företag och de sponsras inte heller på något sätt av Mozilla."
-  } ,
-  
-  "mozillas-basic-platform" : {
-    "message" : "Mozilla tillhandahåller bara en grundläggande plattform för att leverera vår programvara till dig, slutanvändarna. Om vi behöver be våra användare om betalning eller support kan vi inte göra detta från addons.thunderbird.net - det är inte en 'app store' med inbyggda betalväggar eller licenshantering som iTunes eller google play."
-  } ,
-  
-  "addon-authors-struggle" : {
-    "message" : "För att fortsätta vara användbar måste vi tilläggsutvecklare nu finansiera de resurser som behövs för att fixa och skriva om så att våra användare kan dra nytta av den funktionalitet vi tillhandahåller."
-  } ,
-  
-  "btn-want-to-donate" : {
-    "message" : "Jag vill hjälpa till med en engångs donation."
-  } ,
-  
-  "translated-by-google" : {
-    "message": "översättningar från google",
-    "description": "disclaimer."
+  "optionsIntro": {
+    "message": "Aktivera alla elemet du vill ha tillgängliga i dialogruan &quot;Filtreringsregler&quot;. Starta om efter ändringar."
   },
-  
-  "label-remind-me" : {
-    "message": "Påminn mig igen om $countDays$ dagar.",
+  "pane1.title": {
+    "message": "Alternativ för FiltaQuilla"
+  },
+  "prefPanel-inheritPane": {
+    "message": "Ärvda egenskaper"
+  },
+  "prefwindow.title": {
+    "message": "Alternativ för FiltaQuilla"
+  },
+  "purchase-a-license": {
+    "message": "Köp en licens."
+  },
+  "purchase-heading": {
+    "message": "Att köpa en licens!"
+  },
+  "quickFiltersPage": {
+    "message": "Hämta quickFilters!"
+  },
+  "quickFiltersPage_desc": {
+    "message": "Ladda ned detta häftiga tillägg för att turboladda din filtrering. quickFilters förenklar filterdefinition och -hantering."
+  },
+  "renew-your-license": {
+    "message": "Förnya din licens."
+  },
+  "searchTerms": {
+    "message": "Söktermer"
+  },
+  "support-preference": {
+    "message": "Detta är det föredragna sättet att stödja $addonName$.",
     "placeholders": {
-      "countDays" : {
-        "content" : "$1", 
-        "example" : "10"
-      }    
-    }    
+      "addonName": {
+        "content": "$1",
+        "example": "FiltaQuilla"
+      }
+    }
+  },
+  "support-suggestion": {
+    "message": "Så att $addonName$ förblir funktionellt och vid liv, gör det en viktig tjänst:",
+    "placeholders": {
+      "addonName": {
+        "content": "$1",
+        "example": "FiltaQuilla"
+      }
+    }
+  },
+  "supportFiltaquilla": {
+    "message": "Support FiltaQuilla"
+  },
+  "supportFiltaquilla_desc": {
+    "message": "FiltaQuilla is free to download and use - the best way to support the development team is by buying a license for quickFilters Pro. It is the most awesome filter extensions for managing and creating filters in a super convenient way."
+  },
+  "supportPage": {
+    "message": "Besök supportsida"
+  },
+  "supportPage_desc": {
+    "message": "Denna sida beskriver de olika åtgärderna och villkoren du kan lägga till i e-postfilter med FiltaQuilla."
+  },
+  "thanks-for-installing-intro": {
+    "message": "Tack för att du installerade $addonName$.",
+    "placeholders": {
+      "addonName": {
+        "content": "$1",
+        "example": "FiltaQuilla"
+      }
+    }
+  },
+  "thanks-for-updating-intro": {
+    "message": "Tack för att du uppdaterade $addonName$.",
+    "placeholders": {
+      "addonName": {
+        "content": "$1",
+        "example": "FiltaQuilla"
+      }
+    }
+  },
+  "time-and-effort": {
+    "message": "Mina tillägg kräver grundläggande ändringar för att förbli kompatibla med Mozilla-plattformen. Mitt utvecklingsteam på Github (Realraven2000, opto och paenglab) arbetar flitigt med att återställa full funktionalitet för  $addonName$.",
+    "placeholders": {
+      "addonName": {
+        "content": "$1",
+        "example": "FiltaQuilla"
+      }
+    }
+  },
+  "translated-by-google": {
+    "description": "disclaimer.",
+    "message": "översättningar från google"
+  },
+  "window-title": {
+    "description": "page title. first placeholder will be replaced with Add-on name",
+    "message": "Välkommen till $addonName$",
+    "placeholders": {
+      "addonName": {
+        "content": "$1",
+        "example": "FiltaQuilla"
+      }
+    }
   }
 }
